[project]
name = "retroasm"
version = "0.1.0"
description = "Library and tools to convert between assembly and machine code"
authors = [
    {name = "Maarten ter Huurne", email = "maarten@treewalker.org"}
]
maintainers = [
    {name = "Maarten ter Huurne", email = "maarten@treewalker.org"}
]
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.12"
dependencies = [
    "click ~= 8.0"
]

[project.scripts]
retro = 'retroasm.cmdline:main'

[tool.poetry.group.dev.dependencies]
invoke = "^2.0"
pytest = "^8.0.0"
coverage = {version = "^7.4.0", extras = ["toml"]}
pytest-cov = "^4.1.0"
hypothesis = "^6.32.1"
pylint = "^3.0"
mypy = "^1.0.0"
lxml = "^4.3.5"
pre-commit = "^4.0.0"
pyupgrade = "^3.15.2"
ruff = "0.7.2"
vulture = "^2.3"
Sphinx = "^4.3.1"
sphinxcontrib-spelling = "^7.3.0"
sphinx-click = "^3.0.2"

[build-system]
requires = ["poetry-core ~= 2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    # Explicit override:
    "pragma: no cover",
    # Intended to be unreachable:
    "raise NotImplementedError$",
    "assert False($|,)",
    # Debug-only code:
    "def __repr__\\(",
    "def dump\\(",
    # Exclusive to mypy:
    "if TYPE_CHECKING:$",
    "\\.\\.\\.$",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
ignore = [
    # ambiguous-variable-name: I really want to be able to name a register variable "l"
    # Also I don't think that coding style should be used to work around poor font selection.
    "E741",
]
